# adventofcode2024

./: Cargo.toml  README.md  build.sh  go.mod  main.go  run.sh
data/: advent_of_code_2024.yaml
day1/: day1.go  day1_test.go  mod.rs
go/: .gitignore  aoc24.sh  build.sh  create-links.sh  go.mod  go.sum  main.go  run.sh
go/app/cmd/: main.go
go/app/web/: main.go
go/app/web/templates/: days.html  head.html  index.html
go/day1/: day1.go  main.go
go/day1/part1/: main.go  main_test.go
go/day1/part1/cmd/: main.go
go/day1/part1/engine/: main.go  main_test.go
go/day1/part1/web/: main.go
go/day1/part1/web/templates/: description.html  elapsed.html  form.html  index.html  results.html  title.html
go/day1/part2/: main.go  main_test.go
go/day1/part2/cmd/: main.go
go/day1/part2/engine/: main.go  main.go-ORIG  main_test.go
go/day1/part2/web/: main.go
go/day1/part2/web/templates/: description.html  elapsed.html  form.html  index.html  iterations.html  results.html  title.html
go/templates/: head.html  index.html
go/templates/day1/part1/: index.html  results.html
go/templates/day1/part1/partials/: form.html
go/templates/day1/part2/: results.html
go/templates/day1/part2/partials/: elapsed.html  form.html  title.html
go/utils/: main.go  runtime.go  system.go
rust/: .env  Cargo.toml  Dockerfile  aoc24.sh  build-dev.cmd  build-dev.sh  build.cmd  build.sh  main.rs  run-web.sh  run.sh
rust/day1/: mod.rs
rust/src/: cmd.rs  filters.rs  lib.rs  main.rs
rust/src/day1/: mod.rs
rust/src/day1/part1/: mod.rs
rust/src/day1/part1/cmd/: mod.rs
rust/src/day1/part1/engine/: mod.rs
rust/src/day1/part1/web/: mod.rs
rust/src/day1/part1/web/templates/: index.html  results.html
rust/src/day1/part1/web/templates/partials/: description.html  form.html
rust/src/day1/part2/: mod.rs
rust/src/day1/part2/cmd/: mod.rs
rust/src/day1/part2/engine/: mod.rs
rust/src/day1/part2/web/: mod.rs
rust/src/day1/part2/web/templates/: index.html  results.html
rust/src/day1/part2/web/templates/partials/: description.html
rust/src/day1_part_one/: filters.rs  mod.rs
rust/src/day1_part_two/: mod.rs
rust/src/utils/: mod.rs  system.rs  system_linux.rs  system_windows.rs  system_windows_n_macos.rs
rust/templates/: index.html  results.html  sum_of_distances.html
rust/templates/day1/part1/: results.html
rust/templates/day1/part1/partials/: elapsed.html  form.html  title.html
rust/templates/day1/part2/: index.html  results.html
rust/templates/day1/part2/partials/: form.html
rust/templates/partials/: elapsed.html  form.html  head.html  iterations.html  title.html
