[package]
name = "adventofcode2024"
version = "0.1.0"
edition = "2021"
default-run = "aoc24-web"

[dependencies]
askama = "0.12.1"
axum = { version = "0.8.1", features = ["macros"] }
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
serde = {version = "1.0.217", features = ["serde_derive"]}
serde_json = "1.0.134"
thousands = "0.2.0"
serde_yaml = "0.9.34"

[[bin]]
# full-stack web app
name = "aoc24-web"
path = "src/main.rs"

[[bin]]
# command-line app
name = "aoc24"
path = "src/cmd.rs"
