[package]
name = "adventofcode2024"
version = "0.1.0"
edition = "2021"
default-run = "aoc24-web"

[dependencies]
askama = "0.12.1"
axum = { version = "0.8.1", features = ["macros"] }
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
serde = {version = "1.0.217", features = ["serde_derive"]}
serde_json = "1.0.134"
thousands = "0.2.0"
serde_yaml = "0.9.34"
memory-stats = "1.0.0"
procinfo = { version = "0.4.2", optional = true }
sysconf = "0.3.4"
sysinfo = "0.33.1"
winapi = "0.3.9"
rustc_version_runtime = "0.3.0"

[dependencies.windows]
version = "0.48.0"    # Current version as of writing
features = [
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

#[[bin]]
## full-stack web app
#name = "aoc24-web"
#path = "src/app/web/mod.rs"

#[[bin]]
## command-line app
#name = "aoc24"
#path = "src/app/cmd/mod.rs"

[lib]
name = "aoc24lib"     # The name of the target.
path = "src/lib.rs"    # The source file of the target.
test = true            # Is tested by default.
doctest = true         # Documentation examples are tested by default.
bench = true           # Is benchmarked by default.
doc = true             # Is documented by default.
proc-macro = false     # Set to `true` for a proc-macro library.
harness = true         # Use libtest harness.
edition = "2021"       # The edition of the target.
crate-type = ["lib"]   # The crate types to generate.
required-features = [] # Features required to build this target (N/A for lib).

[features]
procinfo = ["dep:procinfo"]
